add single and multi gpus training script for llama 3.2 vision

--- a/LLAVA/llava_train_with_SFT.ipynb
+++ b/LLAVA/llava_train_with_SFT.ipynb
@@ -867,7 +867,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Save and push to hub\n",
+    "trainer.save_model(training_args.output_dir)\n",
+    "if training_args.push_to_hub:\n",
+    "    trainer.push_to_hub()\n",
+    "    if trainer.accelerator.is_main_process:\n",
+    "        processor.push_to_hub(training_args.hub_model_id)"
+   ]
   }
  ],
  "metadata": {
