simplify and add deepspeed config

--- a/LLAMA/llama3.2_vision_instruct_train_with_QLora_SFT.ipynb
+++ b/LLAMA/llama3.2_vision_instruct_train_with_QLora_SFT.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,21 +60,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Loading checkpoint shards: 100%|██████████| 5/5 [00:06<00:00,  1.21s/it]\n"
+      "Loading checkpoint shards: 100%|██████████| 5/5 [00:05<00:00,  1.04s/it]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['k_proj', 'o_proj', 'down_proj', 'gate_proj', 'q_proj', 'up_proj', 'v_proj']\n",
+      "['k_proj', 'down_proj', 'gate_proj', 'v_proj', 'up_proj', 'o_proj', 'q_proj']\n",
       "trainable params: 29,491,200 || all params: 10,699,712,035 || trainable%: 0.2756\n"
      ]
     }
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -416,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -440,14 +440,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'image': <PIL.JpegImagePlugin.JpegImageFile image mode=RGB size=500x500 at 0x7F56355E7C10>, 'Uniq Id': '002e4642d3ead5ecdc9958ce0b3a5a79', 'Product Name': 'Kurio Glow Smartwatch for Kids with Bluetooth, Apps, Camera & Games, Blue', 'Category': \"Toys & Games | Kids' Electronics | Electronic Learning Toys\", 'Selling Price': '$31.30', 'Model Number': 'C17515', 'About Product': 'Make sure this fits by entering your model number. | Kurio watch glow is a real Bluetooth Smartwatch built especially for kids, packed with 20+ apps & games! | Get your glow on with new light-up feature that turns games and activities into colorful fun. | Kurio watch glow includes brand-new games with light effects, including the My little dragon virtual pet and color-changing mood sensor. | Play single and two-player games on one watch, Or connect two watches together via Bluetooth, plus motion-sensitive games that get kids moving! | Take fun selfies with the front-facing camera and decorate them with filters, frames and stickers. | Plus, everything you need in a smartwatch – activity tracker, music player, Alarm/stopwatch, calculator, calendar and so much more! | Scratch resistant and splash-proof - suitable for kids ages 4 and up!', 'Product Specification': 'ProductDimensions:5x3x12inches|ItemWeight:7.2ounces|ShippingWeight:7.2ounces(Viewshippingratesandpolicies)|ASIN:B07TFD5D55|Itemmodelnumber:C17515|Manufacturerrecommendedage:4yearsandup|Batteries:1LithiumPolymerbatteriesrequired.(included)', 'Technical Details': \"Color:Blue show up to 2 reviews by default This sleek, hi-tech Bluetooth Smartwatch is made specifically for kids, and it's packed with apps and games for out-of-the-box fun! Take selfies and videos, play single and two-player games, message friends, listen to music, plus everything you need in a smartwatch– activity tracker, alarm/stopwatch, calculator, calendar and so much more! Plus, parents can add vital information like blood type and allergies to an 'in case of an emergency' (I. C. E. ) app | 7.2 ounces (View shipping rates and policies)\", 'Shipping Weight': '7.2 ounces', 'Variants': 'https://www.amazon.com/Kurio-Smartwatch-Bluetooth-Camera-Games/dp/B07TFD5D55|https://www.amazon.com/Kurio-Smartwatch-Bluetooth-Camera-Games/dp/B07TD8JHKW', 'Product Url': 'https://www.amazon.com/Kurio-Smartwatch-Bluetooth-Camera-Games/dp/B07TFD5D55', 'Is Amazon Seller': 'Y', 'description': \"Kurio Glow Smartwatch: Fun, Safe & Educational!  This kids' smartwatch boasts Bluetooth connectivity, built-in apps & games, and a camera – all in a vibrant blue design. Perfect for learning & play!  #kidssmartwatch #kidselectronics #educationaltoys #kurioglow\"}\n"
+      "{'image': <PIL.JpegImagePlugin.JpegImageFile image mode=RGB size=500x500 at 0x7F5AFCA273D0>, 'Uniq Id': '002e4642d3ead5ecdc9958ce0b3a5a79', 'Product Name': 'Kurio Glow Smartwatch for Kids with Bluetooth, Apps, Camera & Games, Blue', 'Category': \"Toys & Games | Kids' Electronics | Electronic Learning Toys\", 'Selling Price': '$31.30', 'Model Number': 'C17515', 'About Product': 'Make sure this fits by entering your model number. | Kurio watch glow is a real Bluetooth Smartwatch built especially for kids, packed with 20+ apps & games! | Get your glow on with new light-up feature that turns games and activities into colorful fun. | Kurio watch glow includes brand-new games with light effects, including the My little dragon virtual pet and color-changing mood sensor. | Play single and two-player games on one watch, Or connect two watches together via Bluetooth, plus motion-sensitive games that get kids moving! | Take fun selfies with the front-facing camera and decorate them with filters, frames and stickers. | Plus, everything you need in a smartwatch – activity tracker, music player, Alarm/stopwatch, calculator, calendar and so much more! | Scratch resistant and splash-proof - suitable for kids ages 4 and up!', 'Product Specification': 'ProductDimensions:5x3x12inches|ItemWeight:7.2ounces|ShippingWeight:7.2ounces(Viewshippingratesandpolicies)|ASIN:B07TFD5D55|Itemmodelnumber:C17515|Manufacturerrecommendedage:4yearsandup|Batteries:1LithiumPolymerbatteriesrequired.(included)', 'Technical Details': \"Color:Blue show up to 2 reviews by default This sleek, hi-tech Bluetooth Smartwatch is made specifically for kids, and it's packed with apps and games for out-of-the-box fun! Take selfies and videos, play single and two-player games, message friends, listen to music, plus everything you need in a smartwatch– activity tracker, alarm/stopwatch, calculator, calendar and so much more! Plus, parents can add vital information like blood type and allergies to an 'in case of an emergency' (I. C. E. ) app | 7.2 ounces (View shipping rates and policies)\", 'Shipping Weight': '7.2 ounces', 'Variants': 'https://www.amazon.com/Kurio-Smartwatch-Bluetooth-Camera-Games/dp/B07TFD5D55|https://www.amazon.com/Kurio-Smartwatch-Bluetooth-Camera-Games/dp/B07TD8JHKW', 'Product Url': 'https://www.amazon.com/Kurio-Smartwatch-Bluetooth-Camera-Games/dp/B07TFD5D55', 'Is Amazon Seller': 'Y', 'description': \"Kurio Glow Smartwatch: Fun, Safe & Educational!  This kids' smartwatch boasts Bluetooth connectivity, built-in apps & games, and a camera – all in a vibrant blue design. Perfect for learning & play!  #kidssmartwatch #kidselectronics #educationaltoys #kurioglow\"}\n"
      ]
     }
    ],
@@ -458,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -469,7 +469,7 @@
        "<PIL.JpegImagePlugin.JpegImageFile image mode=RGB size=500x500>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -480,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -489,7 +489,7 @@
        "\"Kurio Glow Smartwatch: Fun, Safe & Educational!  This kids' smartwatch boasts Bluetooth connectivity, built-in apps & games, and a camera – all in a vibrant blue design. Perfect for learning & play!  #kidssmartwatch #kidselectronics #educationaltoys #kurioglow\""
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -500,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -509,7 +509,7 @@
        "'Kurio Glow Smartwatch for Kids with Bluetooth, Apps, Camera & Games, Blue'"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -520,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -554,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -563,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -607,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -623,7 +623,7 @@
        " 'images': [<PIL.JpegImagePlugin.JpegImageFile image mode=RGB size=500x500>]}"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -636,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -775,7 +775,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1229,7 +1229,7 @@
        "          10516, 128009]])}"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1252,19 +1252,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[{'messages': [{'content': [{'text': \"Create a Short Product description based on the provided ##PRODUCT NAME## and ##CATEGORY## and image.\\nOnly return description. The description should be SEO optimized and for a better mobile search experience.\\n\\n##PRODUCT NAME##: Kurio Glow Smartwatch for Kids with Bluetooth, Apps, Camera & Games, Blue\\n##CATEGORY##: Toys & Games | Kids' Electronics | Electronic Learning Toys\", 'type': 'text'}, {'text': None, 'type': 'image'}], 'role': 'user'}, {'content': [{'text': \"Kurio Glow Smartwatch: Fun, Safe & Educational!  This kids' smartwatch boasts Bluetooth connectivity, built-in apps & games, and a camera – all in a vibrant blue design. Perfect for learning & play!  #kidssmartwatch #kidselectronics #educationaltoys #kurioglow\", 'type': 'text'}], 'role': 'assistant'}], 'images': [<PIL.JpegImagePlugin.JpegImageFile image mode=RGB size=500x500 at 0x7F5634D32740>]}]\n",
-      "Create a Short Product description based on the provided ##PRODUCT NAME## and ##CATEGORY## and image.\n",
-      "Only return description. The description should be SEO optimized and for a better mobile search experience.\n",
-      "\n",
-      "##PRODUCT NAME##: Kurio Glow Smartwatch for Kids with Bluetooth, Apps, Camera & Games, Blue\n",
-      "##CATEGORY##: Toys & Games | Kids' Electronics | Electronic Learning Toys\n"
+      "[{'messages': [{'content': [{'text': \"Create a Short Product description based on the provided ##PRODUCT NAME## and ##CATEGORY## and image.\\nOnly return description. The description should be SEO optimized and for a better mobile search experience.\\n\\n##PRODUCT NAME##: Kurio Glow Smartwatch for Kids with Bluetooth, Apps, Camera & Games, Blue\\n##CATEGORY##: Toys & Games | Kids' Electronics | Electronic Learning Toys\", 'type': 'text'}, {'text': None, 'type': 'image'}], 'role': 'user'}, {'content': [{'text': \"Kurio Glow Smartwatch: Fun, Safe & Educational!  This kids' smartwatch boasts Bluetooth connectivity, built-in apps & games, and a camera – all in a vibrant blue design. Perfect for learning & play!  #kidssmartwatch #kidselectronics #educationaltoys #kurioglow\", 'type': 'text'}], 'role': 'assistant'}], 'images': [<PIL.JpegImagePlugin.JpegImageFile image mode=RGB size=500x500 at 0x7F5741037B20>]}]\n",
+      "7591\n"
      ]
     }
    ],
@@ -1352,13 +1348,15 @@
     "Though separated by thousands of miles and years, these civilizations share common threads—faith, family, labor, and community. Despite differences in customs and beliefs, daily life across the ancient world reveals humanity’s enduring need for purpose, connection, and wonder. Their legacies, from monumental architecture to written laws, continue to shape our world, echoing across the centuries in each new dawn.\n",
     "\"\"\"\n",
     "\n",
-    "print(train_dataset[0]['messages'][0]['content'][0]['text'])\n",
-    "train_dataset[0]['messages'][0]['content'][0]['text'] = long_txt\n"
+    "print(len(long_txt))\n",
+    "# print(train_dataset[0]['messages'][0]['content'][0]['text'])\n",
+    "train_dataset[0]['messages'][0]['content'][0]['text'] = long_txt\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1385,8 +1383,8 @@
        "\n",
        "    <div>\n",
        "      \n",
-       "      <progress value='2' max='2' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      [2/2 00:02, Epoch 2/2]\n",
+       "      <progress value='200' max='200' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      [200/200 06:02, Epoch 200/200]\n",
        "    </div>\n",
        "    <table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
@@ -1409,10 +1407,10 @@
     {
      "data": {
       "text/plain": [
-       "TrainOutput(global_step=2, training_loss=6.486014366149902, metrics={'train_runtime': 21.7318, 'train_samples_per_second': 0.092, 'train_steps_per_second': 0.092, 'total_flos': 205807308165576.0, 'train_loss': 6.486014366149902, 'epoch': 2.0})"
+       "TrainOutput(global_step=200, training_loss=0.3684157562255859, metrics={'train_runtime': 376.9324, 'train_samples_per_second': 0.531, 'train_steps_per_second': 0.531, 'total_flos': 2.05807308165576e+16, 'train_loss': 0.3684157562255859, 'epoch': 200.0})"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
